[tool.poetry]
name = "gaia-beet"
version = "0.3.0"
description = "Beet plugin to generate Minecraft worldgen files"
authors = ["Misode"]
license = "MIT"

homepage = "https://github.com/misode/gaia-beet"
repository = "https://github.com/misode/gaia-beet"

readme = "README.md"

keywords = [
  "beet",
  "minecraft",
  "gaia",
  "worldgen"
]

include = ["gaiabeet/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
beet = ">=0.45.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.1.0"
isort = "^5.10.1"
python-semantic-release = "^7.27.0"
mudkip = "^0.4.14"
pytest-insta = "^0.1.11"
lectern = ">=0.18.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "tests gaia_beet --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["gaia_beet/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build && poetry run mudkip build --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/misode/gaia-beet"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "Gaia Beet"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
